--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "request": "^2.88.2",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.14.0"
   }
