--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
+    "valid-url": "^1.0.9",
     "whatsapp-web.js": "^1.14.0"
   }
 }
