--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "multer": "^1.4.3",
     "node-localstorage": "^2.2.1",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
